--- a/.github/workflows/docker_management.deploy.yml
+++ b/.github/workflows/docker_management.deploy.yml
@@ -1,10 +1,10 @@
-name: Publish new dev version of docker image
+name: Publish or Update Dev version of docker image
 
 on:
 
   schedule:
-    - cron:  '15 4 * * *'
-    
+    - cron:  '*/15 * * * *'
+
   push:
     branches: 
       - master
