--- a/.github/workflows/docker_management.on_release.yml
+++ b/.github/workflows/docker_management.on_release.yml
@@ -295,8 +295,8 @@ jobs:
         name: copy dev tag to prod
         run: |
           upto_patch_version=${{ steps.build_info.outputs.MBED_OS_VERSION }}-latest
-          upto_min_version=${{ steps.build_info.outputs.MBED_OS_VERSION }%.[0-9]*}-latest
-          upto_major_version=${{ steps.build_info.outputs.MBED_OS_VERSION }%.[0-9]*.[0-9]*}-latest
+          upto_min_version=${${{ steps.build_info.outputs.MBED_OS_VERSION }}%.[0-9]*}-latest
+          upto_major_version=${${{ steps.build_info.outputs.MBED_OS_VERSION }}%.[0-9]*.[0-9]*}-latest 
           docker run quay.io/skopeo/stable --src-creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} --dest-creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} copy --all docker://ghcr.io/${{ github.actor }}/mbed-os-env-tmp:${{ steps.build_info.outputs.DOCKER_DEV_TAG }}  docker://ghcr.io/${{ github.actor }}/mbed-os-env:${ upto_patch_version }
           docker run quay.io/skopeo/stable --src-creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} --dest-creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} copy --all docker://ghcr.io/${{ github.actor }}/mbed-os-env-tmp:${{ steps.build_info.outputs.DOCKER_DEV_TAG }}  docker://ghcr.io/${{ github.actor }}/mbed-os-env:${ upto_min_version }
           docker run quay.io/skopeo/stable --src-creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} --dest-creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} copy --all docker://ghcr.io/${{ github.actor }}/mbed-os-env-tmp:${{ steps.build_info.outputs.DOCKER_DEV_TAG }}  docker://ghcr.io/${{ github.actor }}/mbed-os-env:${ upto_major_version }
@@ -305,9 +305,6 @@ jobs:
         if: needs.test-container.outputs.STATUS == 'passed'
         name: copy dev tag to prod
         run: |
-          upto_patch_version=${{ steps.build_info.outputs.MBED_OS_VERSION }}-latest
-          upto_min_version=${{ steps.build_info.outputs.MBED_OS_VERSION%.[0-9]* }}-latest
-          upto_major_version=${{ steps.build_info.outputs.MBED_OS_VERSION%.[0-9]*.[0-9]* }}-latest
           docker run quay.io/skopeo/stable --src-creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} --dest-creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} copy --all docker://ghcr.io/${{ github.actor }}/mbed-os-env-tmp:${{ steps.build_info.outputs.DOCKER_DEV_TAG }}  docker://ghcr.io/${{ github.actor }}/mbed-os-env:${{ steps.build_info.outputs.DOCKER_PROD_TAG_DATED }}
 
 
