--- a/.github/workflows/docker_management.on_release.yml
+++ b/.github/workflows/docker_management.on_release.yml
@@ -85,7 +85,7 @@ jobs:
             version=${{ github.event.inputs.mbed_os_release_version }}
             cache_source=${version}
           else
-            version=`git describe --tags --abbrev=0  --match mbed-os-[0-9].[0-9].[0-9]`
+            version=`git describe --tags --abbrev=0  --match mbed-os-[0-9]*.[0-9]*.[0-9]*`
             cache_source=${version}
           fi
           echo dev-${version}-${date}-${version} > build_info/dev_tag
