--- a/.github/workflows/docker_management.on_release.yml
+++ b/.github/workflows/docker_management.on_release.yml
@@ -77,7 +77,7 @@ jobs:
         run: |
           mkdir -p build_info
           date=$(date +"%Y.%m.%dT%H.%M.%S")
-          if [ "on" == "${{github.event_name}}" ];then
+          if [ "push" == "${{github.event_name}}" ];then
             version=${GITHUB_REF#refs/tags/}
             # TODO: Find method to find the branch properly
             cache_source="master"
