--- a/.github/workflows/docker_management.on_release.yml
+++ b/.github/workflows/docker_management.on_release.yml
@@ -80,13 +80,13 @@ jobs:
           if [ "push" == "${{github.event_name}}" ];then
             version=${GITHUB_REF#refs/tags/}
             # TODO: Find method to find the branch properly
-            cache_source="master"
+            cache_source="master-latest"
           elif [ "workflow_dispatch" == "${{github.event_name}}" ];then
             version=${{ github.event.inputs.mbed_os_release_version }}
-            cache_source=${version}
+            cache_source=${version}-latest
           else
             version=`git describe --tags --abbrev=0  --match mbed-os-[0-9]*.[0-9]*.[0-9]*`
-            cache_source=${version}
+            cache_source=${version}-latest
           fi
           echo dev-${version}-${date}-${version} > build_info/dev_tag
           echo ${version}-${date} > build_info/prod_tag_dated
@@ -165,7 +165,7 @@ jobs:
           push: true
           file: ./docker_images/mbed-os-env/Dockerfile
           tags: ghcr.io/${{ github.actor }}/mbed-os-env-tmp:${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
-          cache-from: type=registry,ref=ghcr.io/${{ github.actor }}/mbed-os-env:${{ steps.build_info.outputs.CACHE_SOURCE }}-latest
+          cache-from: type=registry,ref=ghcr.io/${{ github.actor }}/mbed-os-env:${{ steps.build_info.outputs.CACHE_SOURCE }}
           cache-to: type=inline
 
       -
