--- a/.github/workflows/docker_management.on_release.yml
+++ b/.github/workflows/docker_management.on_release.yml
@@ -294,6 +294,7 @@ jobs:
         if: needs.test-container.outputs.STATUS != 'failed'
         name: copy dev tag to prod
         run: |
+          set -x
           upto_patch_version=${{ steps.build_info.outputs.MBED_OS_VERSION }}-latest
           upto_min_version=${${{ steps.build_info.outputs.MBED_OS_VERSION }}%.[0-9]*}-latest
           upto_major_version=${${{ steps.build_info.outputs.MBED_OS_VERSION }}%.[0-9]*.[0-9]*}-latest 
