join several workflows together

--- a/.github/workflows/docker_management.on_release.yml
+++ b/.github/workflows/docker_management.on_release.yml
@@ -291,18 +291,16 @@ jobs:
 
       # even if tests skipped (as cache was used as source retag)
       - 
-        if: needs.test-container.outputs.STATUS != 'failed'
+        if: needs.test-container.result=='skipped' || needs.test-container.outputs.STATUS == 'passed'
         name: copy dev tag to prod
         run: |
           set -x
           upto_patch_version=${{ steps.build_info.outputs.MBED_OS_VERSION }}-latest
-          echo ${upto_patch_version}
           upto_min_version=${upto_patch_version%.[0-9]*}-latest
-          echo ${upto_min_version}
           upto_major_version=${upto_patch_version%.[0-9]*.[0-9]*}-latest
-          echo ${upto_major_version} 
           docker run quay.io/skopeo/stable --src-creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} --dest-creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} copy --all docker://ghcr.io/${{ github.actor }}/mbed-os-env-tmp:${{ steps.build_info.outputs.DOCKER_DEV_TAG }}  docker://ghcr.io/${{ github.actor }}/mbed-os-env:${upto_patch_version}
           docker run quay.io/skopeo/stable --src-creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} --dest-creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} copy --all docker://ghcr.io/${{ github.actor }}/mbed-os-env-tmp:${{ steps.build_info.outputs.DOCKER_DEV_TAG }}  docker://ghcr.io/${{ github.actor }}/mbed-os-env:${upto_min_version}
+          # if not manually triggered
           docker run quay.io/skopeo/stable --src-creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} --dest-creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} copy --all docker://ghcr.io/${{ github.actor }}/mbed-os-env-tmp:${{ steps.build_info.outputs.DOCKER_DEV_TAG }}  docker://ghcr.io/${{ github.actor }}/mbed-os-env:${upto_major_version}
 
       - 
