--- a/.github/workflows/docker_management.deploy.yml
+++ b/.github/workflows/docker_management.deploy.yml
@@ -3,7 +3,7 @@ name: Publish or Update Dev version of docker image
 on:
 
   schedule:
-    - cron:  '*/15 * * * *'
+    - cron:  '15 3 * * *'
 
   push:
     branches: 
