--- a/.github/workflows/docker_management.on_release.yml
+++ b/.github/workflows/docker_management.on_release.yml
@@ -33,7 +33,7 @@ on:
       - mbed-os-5.[0-9]+.[0-9]+
 
   schedule:
-    - cron:  '*/15 * * * *'
+    - cron:  '15 4 * * *'
 
   workflow_dispatch:
     inputs:
