--- a/.github/workflows/docker_management.test-PR.yml
+++ b/.github/workflows/docker_management.test-PR.yml
@@ -2,10 +2,11 @@ name: Build and test image when PR is raised
 
 on:
   pull_request:
-    branches: [ master, mbed-os-5.15 ]
+    branches: [ master ]
     paths:
       - docker_images/mbed-os-env/**
       - .github/workflows/docker_management.*
+      - requirements.txt
 
 jobs:
 
