do not delete images

--- a/.github/workflows/docker_management.branch.yml
+++ b/.github/workflows/docker_management.branch.yml
@@ -21,7 +21,7 @@ on:
 
 jobs:
   prepare-tags:
-    if: github.repository_owner == 'ARMmbed'
+    if: github.repository_owner == 'saheerb'
     runs-on: ubuntu-latest
 
     steps:
